fix(layout): increase font size of search box on small screens

--- a/style/layout/_search.scss
+++ b/style/layout/_search.scss
@@ -29,6 +29,10 @@
   }
 
   &-box {
+    @media only screen and (max-width: 1024px) {
+      font-size: $tn-font-size--large;
+    }
+
     width: 100%;
     height: 100%;
     padding: 6px 0;
